deployment/elasticstack/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-frontend
  namespace: elastic-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kibana.chriscarty.com
    http:
      paths:
      - backend:
          serviceName: quickstart-kb-http
          servicePort: 5601
  tls:
  - hosts:
    -  kibana.chriscarty.com
